<resources>
    <string name="app_name">MyViewAndViews</string>
    <string name="judul_text">Asus ROG </string>
    <string name="deskripsi">Layaknya ROG Phone generasi pertama, Asus juga membuat ponsel ini dengan desain kokoh, lengkap dengan logo khas ROG pada bagian punggung ponsel.

Layar seluas 6,59 inci milik ROG Phone II ini dilengkapi dengan proteksi Gorilla Glass 6. Layar tersebut juga memiliki angka refresh rate 120 Hz.

Pada sektor dapur pacu, ROG Phone II dibekali chipset Snapdragon 855 dengan GPU Adreno 640 yang mampu digunakan untuk bermain game dengan konfigurasi tinggi.</string>
    <string name="layar">Ukuran Layar : 6.0 inci AMOLED, 1080 x 2160 pixels. </string>
    <string name="Chipset">Chipset : Qualcomm SDM845 Snapdragon 845 (10 nm) </string>
    <string name="os"> OS : Android 8.1 (Oreo)</string>
    <string name="ram">RAM: 8GB.</string>
    <string name="memori">Memori internal : 128GB / 512GB. </string>
    <string name="Ukuran">Ukuran HP : 158.8 x 76.2 x 8.3 mm.</string>
    <string name="berat">Berat HP : 200 g.</string>
    <string name="kamera">Kamera depan : 8 MP, f/2.0 (wide)</string>


</resources>
