<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/asus"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawableLeft="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="3 Photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rp.20.000.000"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:textColor="#757070"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Terlaris..."/>
        <TextView
            android:padding="16dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:lineSpacingMultiplier="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"/>

        <TextView
            android:layout_marginLeft="16dp"
            android:textSize="17sp"
            android:textColor="#757070"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Spesifikasi..."/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="17sp"
                android:textColor="#BDBABA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Layar"/>
            <TextView
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:textSize="17sp"
                android:textColor="#BDBABA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layar"/>
        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chipset"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Chipset"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OS "/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/os"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ram "/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ram"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Memori"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/memori"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Size Hp"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Ukuran"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Berat"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/berat"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kamera"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:textSize="17sp"
                    android:textColor="#BDBABA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kamera"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_marginLeft="16dp"
            android:textSize="17sp"
            android:textColor="#757070"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Owner..."/>
        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/profil_me"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/aku"/>
            <TextView
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/profil_me"
                android:layout_toRightOf="@+id/profil_me"
                android:textSize="17sp"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rendi Prayata Wibawa"/>
            <TextView
                android:layout_marginTop="27dp"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/profil_me"
                android:layout_toRightOf="@+id/profil_me"
                android:textSize="14sp"
                android:textColor="#817F7F"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CEO of ROG phone.."/>

        </RelativeLayout>

        <Button
            android:background="@drawable/btn"
            android:textColor="#ffffff"
            android:text="BUY NOW"
            android:textSize="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>